fixed footer layout to text-align left in desktop view.  maintained centered alignment for mobile view

--- a/public/css/medium.css
+++ b/public/css/medium.css
@@ -54,6 +54,9 @@
         padding-bottom: 20px;
         height: auto;
     }
+    .footer p{
+        text-align: left;
+    }
     /* content */
     .triggered-info {
         min-height: 100px;
@@ -90,4 +93,5 @@
         color: black;
         font-size: 15px;
     }
+
 }
